--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -16,7 +16,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:fontFamily="monospace"
             android:onClick="cancelClick"
             android:padding="10dp"
             android:text="@string/cancel"
@@ -30,7 +29,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:fontFamily="monospace"
             android:onClick="deleteClick"
             android:padding="10dp"
             android:text="@string/delete"
@@ -48,15 +46,13 @@
             android:text="@string/event_details"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="15sp"
-            android:typeface="monospace" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/btn_create"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:fontFamily="monospace"
             android:onClick="saveClick"
             android:padding="10dp"
             android:text="@string/save"
@@ -121,7 +117,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:fontFamily="monospace"
                     android:paddingBottom="5dp"
                     android:paddingTop="5dp"
                     android:text="@string/all_day"
@@ -147,8 +142,7 @@
                     android:text="@string/event_start_time"
                     android:textColor="#000"
                     android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:typeface="monospace" />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/txt_event_start_date"
@@ -191,8 +185,7 @@
                     android:text="@string/event_end_time"
                     android:textColor="#000"
                     android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:typeface="monospace" />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/txt_event_end_date"
@@ -255,9 +248,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="monospace"
                         android:text="@string/event_repeat_mode"
-                        android:textAllCaps="true"
                         android:textStyle="bold" />
 
                     <RadioGroup
@@ -324,8 +315,7 @@
                         android:text="@string/event_notification"
                         android:textColor="@color/black"
                         android:textSize="16sp"
-                        android:textStyle="bold"
-                        android:typeface="monospace" />
+                        android:textStyle="bold" />
 
                     <RadioGroup
                         android:id="@+id/event_notification_group"
@@ -391,6 +381,7 @@
                     android:background="@color/bright_grey" />
 
                 <TextView
+                    android:id="@+id/anticipated_strs_lvl_tab"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableEnd="@drawable/img_expand"
@@ -422,8 +413,7 @@
                             android:text="@string/stress_lvl"
                             android:textColor="@color/black"
                             android:textSize="15sp"
-                            android:textStyle="bold"
-                            android:typeface="monospace" />
+                            android:textStyle="bold" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -507,8 +497,7 @@
                             android:text="@string/stress_type"
                             android:textColor="@color/black"
                             android:textSize="15sp"
-                            android:textStyle="bold"
-                            android:typeface="monospace" />
+                            android:textStyle="bold" />
 
                         <RadioGroup
                             android:id="@+id/stress_type_group"
@@ -591,6 +580,7 @@
                     android:background="@color/bright_grey" />
 
                 <TextView
+                    android:id="@+id/interventions_tab"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableEnd="@drawable/img_expand"
@@ -626,9 +616,7 @@
                             android:onClick="editInterventionClick"
                             android:padding="10dp"
                             android:textColor="@color/black"
-                            android:textSize="15sp"
-                            android:textStyle="bold"
-                            android:typeface="monospace" />
+                            android:textSize="15sp"/>
 
                     </LinearLayout>
 
