--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -16,7 +16,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:fontFamily="monospace"
             android:onClick="cancelClick"
             android:padding="10dp"
             android:text="@string/cancel"
@@ -34,15 +33,13 @@
             android:text="@string/feedback"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="15sp"
-            android:typeface="monospace" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/btn_create"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:fontFamily="monospace"
             android:onClick="saveClick"
             android:padding="10dp"
             android:text="@string/save"
@@ -73,8 +70,7 @@
                 android:text="@string/current_event_title"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:typeface="monospace" />
+                android:textStyle="bold" />
 
             <CheckBox
                 android:id="@+id/event_done_check"
@@ -97,8 +93,7 @@
                     android:text="@string/expected_stress_level"
                     android:textColor="@color/black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:typeface="monospace" />
+                    android:textStyle="bold" />
 
                 <SeekBar
                     android:id="@+id/expected_stresslvl_seekbar"
@@ -155,8 +150,7 @@
                     android:text="@string/real_stress_level"
                     android:textColor="@color/black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:typeface="monospace" />
+                    android:textStyle="bold" />
 
                 <SeekBar
                     android:id="@+id/real_stresslvl_seekbar"
@@ -218,8 +212,7 @@
                     android:text="@string/stress_incr_title"
                     android:textColor="@color/black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:typeface="monospace" />
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/stress_incr_reason_edit"
