--- a/app/src/main/res/layout/activity_interventions.xml
+++ b/app/src/main/res/layout/activity_interventions.xml
@@ -17,7 +17,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:fontFamily="monospace"
             android:onClick="cancelClick"
             android:padding="10dp"
             android:text="@string/cancel"
@@ -35,15 +34,13 @@
             android:text="@string/intervention_method"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="15sp"
-            android:typeface="monospace" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/btn_create"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:fontFamily="monospace"
             android:onClick="saveClick"
             android:padding="10dp"
             android:text="@string/create"
@@ -134,8 +131,7 @@
         android:hint="@string/self_intervention_hint"
         android:inputType="textMultiLine"
         android:maxLength="128"
-        android:maxLines="5"
-        android:lines="3"
+        android:maxLines="3"
         android:padding="10dp"
         android:paddingTop="5dp"
         android:visibility="gone" />
@@ -155,8 +151,7 @@
             android:text="@string/interventions_list"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:textStyle="bold"/>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -190,8 +185,7 @@
             android:text="@string/intervention_scheduling"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:textStyle="bold"/>
 
         <ScrollView
             android:layout_width="match_parent"
