--- a/app/src/main/res/layout/activity_interventions.xml
+++ b/app/src/main/res/layout/activity_interventions.xml
@@ -282,6 +282,27 @@
                     android:text="@string/_1_day_after"
                     android:textSize="14sp" />
 
+                <RadioButton
+                    android:id="@+id/option_custom"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:tag="1"
+                    android:text="@string/_1_day_after"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/txt_custom_interv_notif"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:onClick="clickCustomIntervNotification"
+                    android:layout_marginStart="32dp"
+                    android:textSize="15sp"
+                    android:text="@string/custom"/>
+
             </RadioGroup>
 
         </ScrollView>
