--- a/app/src/main/res/layout/activity_interventions.xml
+++ b/app/src/main/res/layout/activity_interventions.xml
@@ -289,8 +289,9 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
                     android:tag="1"
-                    android:text="@string/_1_day_after"
-                    android:textSize="14sp" />
+                    android:text="@string/dummy"
+                    android:textSize="14sp"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:id="@+id/txt_custom_interv_notif"
